# stablecoin

./: Anchor.toml  README.md  package.json
programs/stablecoin/: Cargo.toml
programs/stablecoin/src/: constants.rs  error.rs  lib.rs  utils.rs
programs/stablecoin/src/instructions/: deposit.rs  deposit_collateral.rs  init_config.rs  initialize_config.rs  liquidate.rs  liquidate_position.rs  mod.rs  update_config.rs  withdraw.rs  withdraw_collateral.rs
programs/stablecoin/src/state/: collateral.rs  config.rs  position.rs
programs/stablecoin/src/utils/: health_factor.rs  mod.rs  safe_math.rs  signer_seeds.rs  switchboard.rs  system.rs  validate.rs
runbooks/deployment/: main.tx
tests/: ProgramClient.ts  StablecoinClient.ts  accounts.ts  bankrunContextWrapper.ts  constants.ts  pda.ts  setup.ts  surfpool.ts
tests/functional/: deposit.test.ts  depositCollateral.test.ts  initConfig.test.ts  initializeConfig.test.ts  liquidate.test.ts  liquidatePosition.test.ts  updateConfig.test.ts  withdraw.test.ts  withdrawCollateral.test.ts
